# VericodingEBM

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
artifacts/cegis/: summary.json  (+4 more)
configs/: abl_a1_no_scalar_head.yaml  abl_a2_no_listwise.yaml  abl_a3_no_semi_hard.yaml  abl_a4_hinge_pair.yaml  ablation_bce.yaml  ablation_orm.yaml  default.yaml  run10_hybrid.yaml  run11a_safe_stack.yaml  run11b_with_epa.yaml  run7_resume.yaml  run8_marker_aug.yaml  run9_embed_surgery.yaml  sanity.yaml
demo/: README.md
docs/: eval_rubric.md  main.tex  stats_appendix.tex
scripts/: analyze_records.py  audit_corpus.py  audit_corpus.sh  audit_demo.py  audit_held_set.py  audit_logs.py  audit_sft_part1.py  audit_trajectory.py  baseline_diff_sibling.py  baseline_keyword.py  baseline_llm_discrimination.py  baseline_llm_zeroshot.py  baseline_llm_zeroshot_with_markers.py  baseline_ochiai.py  baseline_qwen_ppl.py  baseline_qwen_surprisal_real.py  baseline_trivial.py  build_humanevalpack_rust.py  cegis_demo.py  cegis_demo_3arm.py  cegis_rerun_arm_b.py  dump_eval_records.py  fetch_data.py  fig_energy_landscape.py  figure_position_shift.py  hero_example.py  launch_ablation.sh  leak_audit.py  leak_audit_deep.py  make_paper_figures.py  probe_tokenizer.py  run_full_eval.sh  run_mutator_probe.sh  run_on_existing_pod.sh  runpod_launch.py  score_external_records.py  scrape_verus_real_bugs.py  significance_and_subgroups.py  significance_tests.py  smoke_test_data.py  (+4 more)
tests/: test_data_pipeline.py  test_eval_metrics.py  test_losses.py  test_model_head.py
(+857 files in other folders)
