[project]
name = "ebm-verus"
version = "0.1.0"
description = "Energy-localized vericoding for Verus — per-line energy scorer over (spec, impl) pairs."
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
  "torch>=2.4,<2.7",
  "transformers>=4.46,<5.0",
  "peft>=0.13,<0.16",
  "accelerate>=1.0,<2.0",
  "datasets>=3.0,<4.0",
  "huggingface-hub>=0.25",
  "numpy>=1.26,<3.0",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "tqdm>=4.66",
  "wandb>=0.18",
  "matplotlib>=3.9",
  "ijson>=3.3",
  "regex>=2024.7",
  "pyyaml>=6.0",
  "rich>=13.7",
]

[project.optional-dependencies]
gpu = [
  # H100 / Linux only. Skip on macOS dev.
  "flash-attn>=2.6 ; sys_platform == 'linux'",
  "bitsandbytes>=0.43 ; sys_platform == 'linux'",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ebm_verus"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # long lines OK for now

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
